--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
+  bloc: ^6.1.1
+  flutter_bloc: ^6.1.1
 
   photo_manager: ^0.5.8
   
